--- a/etc/my.cnf.d/server.cnf
+++ b/etc/my.cnf.d/server.cnf
@@ -10,6 +10,14 @@
 
 # this is only for the mysqld standalone daemon
 [mysqld]
+max_connections=1000  # <- connection の limit を更新
+innodb_buffer_pool_size = 1GB # ディスクイメージをメモリ上にバッファさせる値をきめる設定値(メモリの75%くらい)
+innodb_flush_log_at_trx_commit = ２ # 1に設定するとトランザクション単位でログを出力するが 2 を指定すると1秒間に1回ログファイルに出力するようになる
+innodb_flush_method = O_DIRECT # データファイル、ログファイルの読み書き方式を指定する(実験する価値はある)
+innodb_log_file_size=250MB # InnoDBの更新ログを記録するディスク上のファイルサイズ(innodb_buffer_pool_sizeの4分の1程度)
+innodb_file_per_table=ON # InnoDBのデータ領域をテーブルごとに変える
+
+autocommit = 0
 
 # this is only for embedded server
 [embedded]
