appのサービスににLimitNOFILEを追加

--- a/etc/systemd/system/torb.go.service
+++ b/etc/systemd/system/torb.go.service
@@ -12,5 +12,8 @@ Type      = simple
 User      = isucon
 Group     = isucon
 
+LimitNOFILE=65536
+LimitNPROC=infinity
+
 [Install]
 WantedBy = multi-user.target
