--- a/usr/lib/systemd/system/h2o.service
+++ b/usr/lib/systemd/system/h2o.service
@@ -9,6 +9,7 @@ ExecReload=/bin/kill -HUP ${MAINPID}
 ExecStop=/bin/kill -TERM ${MAINPID}
 PrivateTmp=true
 LimitNOFILE=infinity
+LimitNPROC=infinity
 
 [Install]
 WantedBy=multi-user.target
