--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -17,7 +17,7 @@ events {
 }
 
 # Load dynamic modules. See /usr/share/doc/nginx/README.dynamic.
-include /usr/share/nginx/modules/*.conf;
+# include /usr/share/nginx/modules/*.conf;
 
 http {
     log_format main '$remote_addr - $remote_user [$time_local] "$request" $status $body_bytes_sent "$http_referer" "$http_user_agent" $request_time';   # kataribe 用の log format
@@ -85,7 +85,7 @@ http {
           proxy_set_header    X-Forwarded-Server    $host;
           proxy_set_header    X-Forwarded-For    $proxy_add_x_forwarded_for;
 
-          proxy_pass http://127.0.0.1:8080/;
+          proxy_pass http://127.0.0.1:8080;
         }
     }
 
