--- a/s1/etc/nginx/nginx.conf
+++ b/s1/etc/nginx/nginx.conf
@@ -55,6 +55,11 @@ http {
     # for more information.
     include /etc/nginx/conf.d/*.conf;
 
+    upstream torb {
+      server 10.0.0.2:8080;
+      server 10.0.0.3:8080;
+    }
+
     server {
         listen       80 default_server;
         listen       [::]:80 default_server;
@@ -85,7 +90,7 @@ http {
           proxy_set_header    X-Forwarded-Server    $host;
           proxy_set_header    X-Forwarded-For    $proxy_add_x_forwarded_for;
 
-          proxy_pass http://127.0.0.1:8080;
+          proxy_pass http://torb;
         }
     }
 
