--- a/s1/etc/nginx/nginx.conf
+++ b/s1/etc/nginx/nginx.conf
@@ -56,7 +56,7 @@ http {
     include /etc/nginx/conf.d/*.conf;
 
     upstream torb {
-      server 10.0.0.2:8080;
+      # server 10.0.0.2:8080;
       server 10.0.0.3:8080;
     }
 
