--- a/s1/etc/nginx/nginx.conf
+++ b/s1/etc/nginx/nginx.conf
@@ -56,8 +56,8 @@ http {
     include /etc/nginx/conf.d/*.conf;
 
     upstream torb {
-      # server 10.0.0.2:8080;
-      server 10.0.0.3:8080;
+      server localhost:8080;
+      #server 10.0.0.3:8080;
     }
 
     server {
