--- a/s1/etc/nginx/nginx.conf
+++ b/s1/etc/nginx/nginx.conf
@@ -57,7 +57,7 @@ http {
 
     upstream torb {
       server localhost:8080;
-      #server 10.0.0.3:8080;
+      server 10.0.0.3:8080;
     }
 
     server {
