--- a/s1/etc/nginx/nginx.conf
+++ b/s1/etc/nginx/nginx.conf
@@ -22,6 +22,7 @@ events {
 http {
     log_format main '$remote_addr - $remote_user [$time_local] "$request" $status $body_bytes_sent "$http_referer" "$http_user_agent" $request_time';   # kataribe 用の log format
     access_log  /var/log/nginx/access.log  main;
+    access_log off;
 
     # 基本設定
     sendfile    on;
